udistrital/sga_cliente#104 agregando función para encontrar tercero y datos
